docs(swagger): use new wakeEvaluationRequest in swagger docs
